# PyPixBot

./: .gitignore  LICENSE  README.md  constants.py  main.py  pyproject.toml  requirements.txt
pypixbot/plugins/commands/: help_handler.py  qrcode_handler.py  restart_handler.py  start_handler.py
pypixbot/services/: converter.py  pix_service.py
